# creaturepod

./: .gitignore
app/: pyproject.toml
app/src/podapp/: __init__.py
app/src/podapp/app/: cli.py  main.py
app/src/podapp/libraries/common/: appconfig.py  appconfig.yaml  error.py  gstreamer_utils.py  log.py
app/src/podapp/libraries/comms/: coprocessor.py
app/src/podapp/libraries/coprocessors/: ai.py  mcu.py
app/src/podapp/libraries/gstreamer_utils/: app.py  element.py  model.py  postproc.py  preproc.py  sink.py  source.py  utils.py
app/src/podapp/libraries/outputs/: gpio.py  leds.py  screen.py
app/src/podapp/libraries/sensors/: cameras.py
app/tests/: README.md  main.py  test_ai.py  test_cameras.py  test_leds.py  test_mcu.py  test_screen.py  testutils.py
fw/src/: CMakeLists.txt  main.c
fw/src/board/: pinconfig.h
scripts/: display-video.sh  record-mp4.sh  setup-on-raspbian.sh  setup-on-ubuntu.sh  watch-h264.sh  watch-mp4.sh
