[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podapp"
version = "0.0.1"
authors = [{ name="Max Strange", email="maxfieldstrange@gmail.com" }]
description = "Creature Pod Application"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "PyQt6",
    "PyYAML",
]
license = {text = "MIT"}

[project.optional-dependencies]
rpi = [
    "spidev",
]

[project.scripts]
podapp = "podapp:main"
